<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controler.updateentree">

    <Button
        android:id="@+id/accueil"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:drawableBottom="@drawable/accueil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/logout"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:drawableBottom="@drawable/dec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/updateentreepagetitre"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newlibelle"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/inputlibellehint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newdescription"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/inputdescriptionhint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newemplacement"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:layout_marginTop="336dp"
        android:ems="10"
        android:hint="@string/inputemplacementhint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newdate"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginTop="420dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/inputdatehint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/modifier"
        android:layout_width="118dp"
        android:layout_height="47dp"
        android:layout_marginTop="76dp"
        android:text="@string/btnupdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newdate" />

    <Button
        android:id="@+id/showdatepicker"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_marginTop="420dp"
        android:text="..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="> Modifier entree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>