<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0px"
    tools:context=".Controler.MainActivity">

    <EditText
        android:id="@+id/libelle1"
        android:layout_width="275dp"
        android:layout_height="46dp"
        android:layout_marginTop="356dp"
        android:ems="10"
        android:hint='@string/loginhint'

        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="275dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint='@string/passhint'
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/libelle1" />

    <Button
        android:id="@+id/cnx"
        android:layout_width="265dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="#D4E5F1"
        android:gravity="center"
        android:text="@string/btncnx"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/registration"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginTop="108dp"
        android:background="#D4E5F1"
        android:gravity="center"
        android:text="@string/btncreercompte"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/titre1"
        android:layout_width="409dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/titre1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoo" />

</androidx.constraintlayout.widget.ConstraintLayout>